# clickhouse-example

./: .gitignore  CMakeLists.txt  config.toml  generate-release.sh  vcpkg.json
clickhouse-example/: CMakeLists.txt  auto_layoff_strategy.h  client_orders.h  client_trades.h  core_price_filtered.h  currency_pair_specs.h  currency_pnl.h  fads_markup.h  forward_points_blending_weight.h  ilp_trades.h  main.cpp  manual_forward_points.h  order_book.h  order_book_wide.h  position_transfer_service_data.h  som_benchmark_strategy.h  stdafx.h  tca_orders.h  tca_trades.h  types.h
clickhouse-example/assets/: config.toml
clickhouse-example/include/mdh/cluster/: Aggregator.h  Args.h  Buffer.h  Clickhouse.h  Logger.h  ProtobufAdapter.h  Tools.h  ULID.h
clickhouse-example/include/mdh/cluster/adapter/: ProtobufAdapter.h
clickhouse-example/include/mdh/cluster/args/: Args.h
clickhouse-example/include/mdh/cluster/log/: Logger.h
clickhouse-example/include/mdh/dvc/: auto_layoff_strategy.h  client_orders.h  client_trades.h  core_price_filtered.h  currency_pair_specs.h  currency_pnl.h  fads_markup.h  forward_points_blending_weight.h  ilp_trades.h  manual_forward_points.h  object_with_ulid.h  order_book.h  order_book_wide.h  position_transfer_service_data.h  som_benchmark_strategy.h  sor_child_order.h  sor_execution.h  sor_lazy_execution.h  sor_lazy_order.h  strategy_config.h  tca_orders.h  tca_trades.h  types.h
clickhouse-example/mdh/cluster/adapter/: ProtobufAdapter.cpp
clickhouse-example/mdh/cluster/args/: Args.cpp  Args.h
clickhouse-example/mdh/cluster/log/: Logger.cpp
clickhouse-example/mdh/cluster/mutex/: Mutex.cpp  Mutex.h  NullMutex.cpp  NullMutex.h
clickhouse-example/src/: Aggregator.cpp  Args.cpp  Buffer.cpp  Clickhouse.cpp  Logger.cpp  Mutex.cpp  NullMutex.cpp  ProtobufAdapter.cpp  Tools.cpp  ULID.cpp  auto_layoff_strategy.cpp  client_orders.cpp  client_trades.cpp  core_price_filtered.cpp  currency_pair_specs.cpp  currency_pnl.cpp  fads_markup.cpp  forward_points_blending_weight.cpp  gen.sh  ilp_trades.cpp  main.cpp  manual_forward_points.cpp  object_with_ulid.cpp  order_book.cpp  order_book_wide.cpp  position_transfer_service_data.cpp  som_benchmark_strategy.cpp  sor_child_order.cpp  sor_execution.cpp  sor_lazy_execution.cpp  sor_lazy_order.cpp  stdafx.cpp  strategy_config.cpp  tca_orders.cpp  tca_trades.cpp  types.cpp  ulid.c
cmake/: add_clang_format.cmake  clang_options.cmake  proto.cmake
proto/: CMakeLists.txt  auto_layoff_strategy.proto  client_orders.proto  client_trades.proto  core_price_filtered.proto  currency_pair_specs.proto  currency_pnl.proto  fads_markup.proto  forward_points_blending_weight.proto  ilp_trades.proto  manual_forward_points.proto  order_book.proto  order_book_wide.proto  position_transfer_service_data.proto  som_benchmark_strategy.proto  sor_child_order.proto  sor_execution.proto  sor_lazy_execution.proto  sor_lazy_order.proto  strategy_config.proto  tca_orders.proto  tca_trades.proto
